--- a/chaudiere.html
+++ b/chaudiere.html
@@ -37,12 +37,15 @@
 </script>
 
 </head>
+
+
+</script>
   <body>
     <section class="Navbar navbar-main fixedNav">
     <nav class="navbar Navbar_main navbar-expand-lg fixedNav">
         <div class="container-fluid">
             <div class="Navbar_image">
-                <a href="./index.html "><img src="./assets/img/logo.png" class="Navbar_image-img"
+                <a href="./index.html"><img src="./assets/img/logo.png" class="Navbar_image-img"
                         alt="" /></a>
             </div>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
@@ -52,7 +55,7 @@
             <div class="collapse navbar-collapse Navbar_nav-collapse" id="navbarNav">
                 <ul class="navbar-nav Navbar_nav ml-auto">
                     <li class="nav-item Navbar_nav-item">
-                        <a class="nav-link Navbar_nav-link" href="./index.html "> Accueil</a>
+                        <a class="nav-link Navbar_nav-link" href="./index.html"> Accueil</a>
                     </li>
                     <li class="nav-item dropdown Navbar_nav-item">
                         <a class="nav-link Navbar_nav-link dropdown-toggle  d-flex align-items-center" href="#"
@@ -61,21 +64,24 @@
                             Services
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item Navbar_nav-link" href="./chaudiere.html ">Chaudière</a>
-                            <hr class="Navbar_nav-line">
-                            <a class="dropdown-item Navbar_nav-link" href="./salle-de-bain.html ">
-                                Salle de bain</a>
-                                <hr class="Navbar_nav-line">
-                            <a class="dropdown-item Navbar_nav-link" href="./pompe-a-chaleur.html ">
+                            <a class="dropdown-item Navbar_nav-link" href="./pompe-a-chaleur.html">
                                 Pompe à chaleur</a>
                                 <hr class="Navbar_nav-line">
-                            <a class="dropdown-item Navbar_nav-link" href="./chauffage-plomberie-sanitare.html ">Chauffage - Plomberie - Sanitaire</a>
+                            <a class="dropdown-item Navbar_nav-link" href="./chaudiere.html">Chaudière</a>
                             <hr class="Navbar_nav-line">
-                            <a class="dropdown-item Navbar_nav-link" href="./racordement-de-gaz-naturel.html ">
+                            <a class="dropdown-item Navbar_nav-link" href="">
+                                Contrat d’entretien chaudière et PAC</a>
+                                <hr class="Navbar_nav-line">
+                            <a class="dropdown-item Navbar_nav-link" href="./salle-de-bain.html">
+                                Salle de bain</a>
+                                <hr class="Navbar_nav-line">
+                            <a class="dropdown-item Navbar_nav-link" href="./chauffage-plomberie-sanitare.html">Chauffage - Plomberie - Sanitaire</a>
+                            <hr class="Navbar_nav-line">
+                            <a class="dropdown-item Navbar_nav-link" href="./racordement-de-gaz-naturel.html">
                                 Raccordement gaz naturel</a>
                                 <hr class="Navbar_nav-line">
-                            <a class="dropdown-item Navbar_nav-link" href="./depannage-urgent.html ">
-                                DÉPANNAGE URGENT</a>
+                            <a class="dropdown-item Navbar_nav-link" href="./depannage-urgent.html">
+                                Dépannage urgent</a>
                         </div>
                     </li>
                     <li class="nav-item dropdown Navbar_nav-item">
@@ -85,31 +91,41 @@
                             TARIFS
                         </a>
                         <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <a class="dropdown-item Navbar_nav-link" href="./tarifs-particuliers.html ">Tarifs particuliers</a>
+                            <a class="dropdown-item Navbar_nav-link" href="./tarifs-particuliers.html">Tarifs particuliers</a>
                             <hr class="Navbar_nav-line">
-                            <a class="dropdown-item Navbar_nav-link" href="./tarifs-professionnels.html ">
+                            <a class="dropdown-item Navbar_nav-link" href="./tarifs-professionnels.html">
                                 Tarifs professionnels</a>
                         </div>
                     </li>
                     <li class="nav-item Navbar_nav-item">
-                        <a class="nav-link Navbar_nav-link" href="./zones-d-intervention.html ">
+                        <a class="nav-link Navbar_nav-link" href="./zones-d-intervention.html">
                             ZONES D’INTERVENTIONS</a>
                     </li>
                     <li class="nav-item Navbar_nav-item">
-                        <a class="nav-link Navbar_nav-link" href="./qui-sommes-nous.html ">
+                        <a class="nav-link Navbar_nav-link" href="./qui-sommes-nous.html">
                             QUI SOMMES-NOUS ?</a>
                     </li>
                     <li class="nav-item Navbar_nav-item">
-                        <a class="nav-link Navbar_nav-link" href="./nos-realisations.html ">NOS RÉALISATIONS</a>
+                        <a class="nav-link Navbar_nav-link" href="./nos-realisations.html">NOS RÉALISATIONS</a>
                     </li>
                     <li class="nav-item Navbar_nav-item">
-                        <a class="nav-link Navbar_nav-btn" href="./devis.html ">Devis gratuit</a>
+                        <a class="nav-link Navbar_nav-btn" href="./devis.html">Devis gratuit</a>
                     </li>
                 </ul>
             </div>
         </div>
     </nav>
-</section> 
+</section>
+
+<script>
+    $(document).ready(function () {
+    $("li.active").removeClass("active");
+    $('a[href="' + location.pathname + '"]')
+      .closest("li")
+      .addClass("active");
+});
+
+</script>
 
     
 
@@ -151,7 +167,7 @@
                     être laissées sur place. Le retrait d’une chaudière doit être effectué au moment de l’installation,
                     car c’est généralement moins coûteux et plus facile pour votre technicien.</p>
                     <div class="d-flex justify-content-center align-items-center menu_button">
-                        <a class="nav-link Navbar_nav-btn" href="./devis.html ">Devis gratuit</a>
+                        <a class="nav-link Navbar_nav-btn" href="./devis.html">Devis gratuit</a>
                     </div>
             </div>
             <div class="menu_line">
@@ -162,7 +178,7 @@
                     <img src="./assets/img/icon10.png" alt="" class="menu_content-icon--img-4">
                 </div>
                 <h3 class="menu_content-title">Dimensions et installation</h3>
-                <p class="menu_content-p text-right">Pour une nouvelle installation, le technicien devra faire des
+                <p class="menu_content-p text-justify">Pour une nouvelle installation, le technicien devra faire des
                     calculs minutieux afin de s’assurer que le système fonctionne correctement. Une unité
                     surdimensionnée ou sous-dimensionnée peut avoir de gros problèmes et tomber en panne trop tôt.
                     Lorsque vous remplacez une ancienne chaudière, la plupart des mesures seront probablement déjà en
@@ -194,7 +210,7 @@
         <img src="./assets/img/1.png" alt="" class="bg_image-img w-100">
     </div>
 </section>
-<section class="menu_content menu_margin">
+<section class="menu_content menu_margin pt-0">
     <div class="menu_header">
         <h3 class="menu_header-title mb-0">Pourquoi vous devriez nettoyer votre chaudière ?</h3>
     </div>
@@ -210,18 +226,18 @@
     </p>
     <div class="row mt-5">
         <div class="col-md-6">
-            <p class="menu_content-p">• Assurez l’efficacité</p>
-            <p class="menu_content-p">• Économisez des coûts</p>
-            <p class="menu_content-p">• Diminution du risque de défaillance</p>
+            <p class="menu_content-p text-center" style="white-space: nowrap;">• Assurez l’efficacité</p>
+            <p class="menu_content-p text-center" style="white-space: nowrap;">• Économisez des coûts</p>
+            <p class="menu_content-p text-center" style="white-space: nowrap;">• Diminution du risque de défaillance</p>
         </div>
         <div class="col-md-6">
-            <p class="menu_content-p">• Protéger la famille</p>
-            <p class="menu_content-p">• Maintenez la garantie du fabricant</p>
-            <p class="menu_content-p">• Prolonger la durée de vie de l’unité</p>
+            <p class="menu_content-p text-center" style="white-space: nowrap;">• Protéger la famille</p>
+            <p class="menu_content-p text-center" style="white-space: nowrap;">• Maintenez la garantie du fabricant</p>
+            <p class="menu_content-p text-center" style="white-space: nowrap;">• Prolonger la durée de vie de l’unité</p>
         </div>
     </div>
     <div class="d-flex justify-content-center align-items-center menu_button">
-        <a class="nav-link Navbar_nav-btn" href="./devis.html ">Devis gratuit</a>
+        <a class="nav-link Navbar_nav-btn" href="./devis.html">Devis gratuit</a>
     </div>
 </section>
 <section class="bg3">
@@ -231,13 +247,13 @@
         </div>
     </div>
 </section>
-<section class="menu_content menu_margin">
+<section class="menu_content menu_margin pb-0">
     <p class="menu_content-p">Votre chaudière montre-t-elle des signes d’un besoin de réparation ? Si vous avez remarqué
         l’un des problèmes de réparation de chaudière et qu’il persiste ou qu’il est trop difficile à résoudre par
         vous-même, appelez les spécialistes de la réparation de chaudières de GCGS pour un service de réparation de
         chaudières en France.</p>
 </section>
-<section class="menu_content menu_margin">
+<section class="menu_content menu_margin pt-0">
     <div class="menu_header">
         <h3 class="menu_header-title mb-0">Signes indiquant que vous devez faire réparer votre chaudière</h3>
     </div>
@@ -246,9 +262,10 @@
         régler les problèmes éventuels sans vous retrouver sans chauffage quand il fait froid. Voici quelques signes qui
         vous indiquent qu’il est temps de réparer votre chauffe-eau :
         <br><br>
-        • Bruits forts en cours de fonctionnement<br>
-        • Fuite de la chaudière<br>
-        • Un manque de chaleur<br>
+        </p>
+        <p class="menu_content-p mt-0">• Bruits forts en cours de fonctionnement</p>
+        <p class="menu_content-p mt-0">• Fuite de la chaudière</p>
+        <p class="menu_content-p mt-0">• Un manque de chaleur</p>
     </p>
 </section>
     </div>
@@ -259,7 +276,7 @@
     <footer class="footer">
     <div class="container-fluid">
         <div class="footer_logo">
-            <a href="./index.html "><img src="./assets/img/logo.png" class="footer_logo-img" alt="" /></a>
+            <a href="./index.html"><img src="./assets/img/logo.png" class="footer_logo-img" alt="" /></a>
         </div>
         <div class="row justify-content-center">
             <div class="col-md-4">
@@ -281,8 +298,11 @@
                                 class="footer_content-li--link">secretariat@gcgs91.com</a>
                         </li>
                         <li class="footer_content-li">
-                                                        Showroom: 18 rue Edouard Branly <br>
-                                                        <div class="text-center">91120 Palaiseau</div>
+                            <div class="d-flex footer_content-li">
+                                <span class="footer_content-li">Showroom: </span> &nbsp;&nbsp;
+                                <span class="footer_content-li"> 18 rue Edouard Branly<br>91120 Palaiseau</span>
+                            </div>
+        
                         </li>
                     </ul>
                 </div>
@@ -292,22 +312,22 @@
                     <h3 class="footer_content-title">Liens utiles</h3>
                     <ul class="footer_content-ul">
                         <li class="footer_content-li">
-                            <a href="./index.html " class="footer_content-li--link">ACCUEIL</a>
+                            <a href="./index.html" class="footer_content-li--link">ACCUEIL</a>
                         </li>
                         <li class="footer_content-li">
-                            <a href="./chaudiere.html " class="footer_content-li--link">SERVICES</a>
+                            <a href="./chaudiere.html" class="footer_content-li--link">SERVICES</a>
                         </li>
                         <li class="footer_content-li">
-                            <a href="./tarifs-particuliers.html " class="footer_content-li--link">TARIFS</a>
+                            <a href="./tarifs-particuliers.html" class="footer_content-li--link">TARIFS</a>
                         </li>
                         <li class="footer_content-li">
-                            <a href="./zones-d-intervention.html " class="footer_content-li--link">ZONES D’INTERVENTION</a>
+                            <a href="./zones-d-intervention.html" class="footer_content-li--link">ZONES D’INTERVENTION</a>
                         </li>
                         <li class="footer_content-li">
-                            <a href="./nos-realisations.html " class="footer_content-li--link">NOS RÉALISATIONS</a>
+                            <a href="./nos-realisations.html" class="footer_content-li--link">NOS RÉALISATIONS</a>
                         </li>
                         <li class="footer_content-li">
-                            <a href="./pompe-a-chaleur-92.html " class="footer_content-li--link">Pompe à chaleur 92</a>
+                            <a href="./pompe-a-chaleur-92.html" class="footer_content-li--link">Pompe à chaleur 92</a>
                         </li>
                     </ul>
                 </div>
@@ -339,13 +359,14 @@
             </div>
         </div>
         <div class="d-flex justify-content-center align-items-center menu_button">
-            <a class="nav-link Navbar_nav-btn" href="./contact.html ">Contactez-nous</a>
+            <a class="nav-link Navbar_nav-btn" href="./devis.html
+">Contactez-nous</a>
         </div>
     </div>
     <div class="footer_bottom d-flex justify-content-center pt-5">
         <a href="http://bhinternet.fr/" target="_blank" class="footer_content-li--link text-center">BHInternet - Creation site
             internet | 2022 | </a>
-        <a href="./mentionsLegales.html " class="footer_content-li--link text-center">&nbsp;Mentions legales</a>
+        <a href="./mentions-legales.html" class="footer_content-li--link text-center">&nbsp;Mentions legales</a>
     </div>
 </footer>
 
