--- a/contrat-d-entretien-chaudiere-et-pac.html
+++ b/contrat-d-entretien-chaudiere-et-pac.html
@@ -17,22 +17,22 @@
     <script defer src="./assets/js/bootstrap.min.js"></script>
     <script src="https://apps.elfsight.com/p/platform.js" defer></script>
     <div class="elfsight-app-228c7b02-adde-46c1-9c4c-67e4756d541b"></div>
-    <title>GCGS — Créateur passionné, entrepreneur dynamique, et innovateur courageux</title>
-<meta property="og:title" content="GCGS — Créateur passionné, entrepreneur dynamique, et innovateur courageux" />
+    <title></title>
+<meta property="og:title" content="" />
 <meta property="og:locale" content="fr_FR" />
-<meta name="description" content="Si votre vieille salle de bains a connu des jours meilleurs et a besoin d’être réparée, les services de réfection de salle de bains de GCGS peuvent vous aider." />
-<meta property="og:description" content="Si votre vieille salle de bains a connu des jours meilleurs et a besoin d’être réparée, les services de réfection de salle de bains de GCGS peuvent vous aider." />
+<meta name="description" content="" />
+<meta property="og:description" content="" />
 <meta name="keywords" content="" />
-<link rel="canonical" href="http://localhost:4000/salle-de-bain" />
-<meta property="og:url" content="http://localhost:4000/salle-de-bain" />
+<link rel="canonical" href="http://localhost:4000/contrat-d-entretien-chaudiere-et-pac" />
+<meta property="og:url" content="http://localhost:4000/contrat-d-entretien-chaudiere-et-pac" />
 <meta property="og:site_name" content="BHInternet" />
 <script type="application/ld+json">
 {
 "@context":"https://schema.org",
 "@type":"WebSite",
-"url":"http://localhost:4000/salle-de-bain",
-"description":"Si votre vieille salle de bains a connu des jours meilleurs et a besoin d’être réparée, les services de réfection de salle de bains de GCGS peuvent vous aider.",
-"name":"GCGS — Créateur passionné, entrepreneur dynamique, et innovateur courageux"
+"url":"http://localhost:4000/contrat-d-entretien-chaudiere-et-pac",
+"description":"",
+"name":""
 }
 </script>
 
@@ -117,49 +117,54 @@
     
 
     <div class="">
-        <section class="banner-5">
+        <section class="banner-pac">
     <div class="container">
         <div class="row">
             <div class="col-lg-12">
                 <div class="banner_content">
-                    <h1 class="slider_content-title">SALLE DE BAIN</h1>
+                    <h1 class="slider_content-title">CONTRAT D’ENTRETIEN
+                        chaudière ET PAC</h1>
                 </div>
             </div>
         </div>
     </div>
 </section>
-<section class="menu_content menu_margin">
+<section class="menu_content menu_margin pt-0 mt-0 pb-0">
     <div class="menu_header">
-        <h2 class="menu_header-title mb-0">Une salle de bains propre, bien rangée et qui sent bon, peut faire des
-            merveilles.</h2>
+        <h2 class="menu_header-title mb-0">GCGS propose des contrats d’entretien pour votre chaudière</h2>
     </div>
-    <p class="menu_content-p">Mais avant de vous laisser emporter par la première salle d’exposition de salles de bains
-        dans laquelle vous entrez, prenez le temps de planifier correctement l’espace, de rechercher toutes les options
-        en matière d’agencement et d’installation de salles de bains, et de réfléchir à la personne qui effectuera le
-        travail pour vous. N’oubliez pas que de nombreux entrepreneurs en bâtiment peuvent également vous aider à
-        concevoir votre salle de bains.
-        Les salles de bains sont un centre d’activité, et vous voulez que tout soit beau et fonctionne correctement. Des
-        robinets aux ventilateurs, des toilettes au carrelage, quel que soit le projet, nos solutions de réparation de
-        salle de bains couvrent toutes les bases. Choisissez GCGS, nous promettons d’arriver à l’heure, de fournir un
-        travail de qualité et de garantir votre satisfaction.</p>
+    <p class="menu_content-p">Le Contrat d’Entretien Chaudière (gaz ou fioul) fournit par GCGS vous fait bénéficier de
+        tous les services d’installation et de dépannage relatif à votre chaudière. Notre entreprise fait partie des
+        professionnels reconnus pouvant délivrer ce type de service.
+        Goncalves Chauffage Gaz Services c’est également le spécialiste pour la pose de chaudière Frisquet, De Dietrich,
+        Elm Leblanc, Saunier Duval, Viessmann, et la pose de chaudière Chaffoteaux et Maury.</p>
 </section>
-<section class="menu_content menu_margin mt-0">
+<section class="menu_content menu_margin mt-0 pt-2">
     <div class="bg_image">
-        <img src="./assets/img/3.png" alt="" class="bg_image-img w-100">
+        <img src="./assets/img/pac.png" alt="" class="bg_image-img w-100">
     </div>
 </section>
-<section class="menu_content menu_margin">
+<section class="menu_content menu_margin mt-0 pt-0">
     <div class="menu_header">
-        <h3 class="menu_header-title mb-0">Ai-je besoin d’un constructeur professionnel ?</h3>
+        <h3 class="menu_header-title mb-0">Les avantages des contrats d’entretien </h3>
     </div>
-    <p class="menu_content-p">Plusieurs métiers interviennent dans l’aménagement d’une salle de bains : un constructeur,
-        un carreleur, un électricien et un plombier. Vous pouvez également avoir besoin d’un plâtrier ou d’un
-        décorateur. Certains constructeurs sont capables d’effectuer tous les travaux nécessaires à l’aménagement d’une
-        salle de bains. Si vous faites appel à un constructeur qui peut superviser et gérer le projet d’installation de
-        la salle de bains, il peut également engager et coordonner les corps de métier pour vous.<br>
-        Votre itinéraire doit tenir compte de plusieurs facteurs : votre budget, le calendrier que vous souhaitez
-        respecter, la quantité de travail nécessaire à l’installation de votre salle de bains et le type d’équipements
-        que vous avez choisis.</p>
+    <p class="menu_content-p">En souscrivant à ce contrat d’entretien, vous pourrez profiter également d’un condensé de
+        conseils et d’informations pertinentes qui vous seront utiles pour l’utilisation de votre chaudière. Ces
+        indications vous permettent également de jouir d’une bonne marche de vos équipements de chauffage et sanitaire.
+    </p>
+    <div class="center_flex align-items-center mb-5">
+        <div class="center_image mx-5">
+            <img src="./assets/img/image-15.png" alt="" class="center_image-img15" />
+        </div>
+    </div>
+    <p class="menu_content-p">Lorsque vous sollicitez l’expertise d’une entreprise RGE et qualifiée Professionnel
+        Installation et Maintenance du Gaz comme Goncalves Chauffage Gaz Services (GCGS), pour votre installation de
+        chauffage ou pour le remplacement de votre chaudière, vous choisissez une entreprise respectueuse de l’éco
+        conditionnalité. Elle vous permettra de bénéficier d’un levier financier tel que :
+    </p>
+    <p class="menu_content-p mt-0 mr-auto">• L’Eco-PTZ, en vigueur depuis juillet 2012</p>
+    <p class="menu_content-p mt-0 mr-auto">• Le crédit d’impôt pour la transition énergétique, octroyé depuis janvier 2015</p>
+    <p class="menu_content-p mt-0 mr-auto">• La TVA à taux réduit</p>
     <div class="d-flex justify-content-center align-items-center menu_button">
         <a class="nav-link Navbar_nav-btn" href="./devis.html">Devis gratuit</a>
     </div>
