--- a/qui-sommes-nous.html
+++ b/qui-sommes-nous.html
@@ -37,9 +37,6 @@
 </script>
 
 </head>
-
-
-</script>
   <body>
     <section class="Navbar navbar-main fixedNav">
     <nav class="navbar Navbar_main navbar-expand-lg fixedNav">
@@ -69,7 +66,7 @@
                                 <hr class="Navbar_nav-line">
                             <a class="dropdown-item Navbar_nav-link" href="./chaudiere.html">Chaudière</a>
                             <hr class="Navbar_nav-line">
-                            <a class="dropdown-item Navbar_nav-link" href="">
+                            <a class="dropdown-item Navbar_nav-link" href="./contrat-d-entretien-chaudiere-et-pac.html">
                                 Contrat d’entretien chaudière et PAC</a>
                                 <hr class="Navbar_nav-line">
                             <a class="dropdown-item Navbar_nav-link" href="./salle-de-bain.html">
@@ -116,16 +113,6 @@
         </div>
     </nav>
 </section>
-
-<script>
-    $(document).ready(function () {
-    $("li.active").removeClass("active");
-    $('a[href="' + location.pathname + '"]')
-      .closest("li")
-      .addClass("active");
-});
-
-</script>
 
     
 
@@ -221,7 +208,7 @@
                 </div>
             </div>
             <div class="col-md-3">
-                <div class="footer_content">
+                <div class="footer_content to-center-768">
                     <h3 class="footer_content-title">Liens utiles</h3>
                     <ul class="footer_content-ul">
                         <li class="footer_content-li">
@@ -263,7 +250,7 @@
                 </div>
             </div>
             <div class="col-md-2">
-                <div class="footer_content">
+                <div class="footer_content ab-right-768">
                     <h3 class="footer_content-title">Notre partenaire</h3>
                     <div class="footer_images">
                         <img src="./assets/img/f5.png" alt="" class="footer_images-img-5">
@@ -272,8 +259,7 @@
             </div>
         </div>
         <div class="d-flex justify-content-center align-items-center menu_button">
-            <a class="nav-link Navbar_nav-btn" href="./devis.html
-">Contactez-nous</a>
+            <a class="nav-link Navbar_nav-btn" href="./devis.html">Contactez-nous</a>
         </div>
     </div>
     <div class="footer_bottom d-flex justify-content-center pt-5">
